--- a/UI/.env
+++ b/UI/.env
@@ -1,6 +1,8 @@
-FIREBASE_API_KEY=
-FIREBASE_AUTH_DOMAIN=
-FIREBASE_PROJECT_ID=
-FIREBASE_STORAGE_BUCKET=
-FIREBASE_MESSAGE_SENDER_ID=
-FIREBASE_APP_ID=
+FIREBASE_API_KEY=AIzaSyDePldqTycFVvuA6LHsUl3UEkcBNPIJVpk
+FIREBASE_AUTH_DOMAIN=codeway-case-study-49281.firebaseapp.com
+FIREBASE_PROJECT_ID=codeway-case-study-49281
+FIREBASE_STORAGE_BUCKET=codeway-case-study-49281.appspot.com
+FIREBASE_MESSAGE_SENDER_ID=861655153344
+FIREBASE_APP_ID=1:861655153344:web:071dae6eedc217bffecb25
+
+PORT=3000
